--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "jss-camel-case",
-  "description": "Allows to write camel cased rule properties.",
-  "version": "0.1.2",
+  "description": "JSS plugin that allows to write camel cased rule properties",
+  "version": "0.2.0",
   "author": {
     "name": "Oleg Slobodskoi",
     "email": "oleg008@gmail.com"
@@ -17,13 +17,9 @@
   ],
   "engines": {},
   "scripts": {},
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/mit-license.php"
-    }
-  ],
+  "license": "MIT",
+  "main": "dist/jss-camel-case.js",
   "dependencies": {
-    "jsstyles": "^2.1.0"
+    "jsstyles": "^2.3.0"
   }
 }
