--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
   "license": "MIT",
   "main": "./lib/index.js",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
-    "eslint": "^1.7.3",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.1",
+    "babel-eslint": "^5.0.0-beta9",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.16.1",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-config-jss": "^0.2.0",
-    "eslint-plugin-react": "^3.6.3",
     "jss": ">= 3.0.0 < 4.0.0",
     "opener": "^1.4.1",
     "qunitjs": "1.15.0",
